# LCUFixTool

./: .gitignore  build.bat  data.json  pyproject.toml  test.py  version.json
data/: version.json
data/wad/: rcp-fe-lol-champ-select.wad  rcp-fe-lol-collections.wad  rcp-fe-lol-navigation.wad  rcp-fe-lol-social.wad
python/: main.py
src/cmd/: main.py
src/python/: down.py  model.py
src/qt/: download.py  lcu_ui.py  lcufix copy.py  lcufix.py  main.py  model.py  utils.py
src/qt6/: lcu_rc.py  lcu_ui.py  lcu_ui2.py  main.py  model.py  test.py  utils.py
wad/: rcp-fe-lol-parties.wad
wad/11.20/: rcp-fe-lol-champ-select.wad  rcp-fe-lol-collections.wad  rcp-fe-lol-navigation.wad  rcp-fe-lol-social.wad
wad/11.20_1/: rcp-fe-lol-parties.wad
wad/11.21/: rcp-fe-lol-champ-select.wad  rcp-fe-lol-collections.wad  rcp-fe-lol-navigation.wad  rcp-fe-lol-parties.wad  rcp-fe-lol-social.wad
wad/11.22/: rcp-fe-lol-champ-select.wad  rcp-fe-lol-collections.wad  rcp-fe-lol-navigation.wad  rcp-fe-lol-parties.wad  rcp-fe-lol-social.wad
wad/11.23/: rcp-fe-lol-champ-select.wad  rcp-fe-lol-collections.wad  rcp-fe-lol-navigation.wad  rcp-fe-lol-parties.wad  rcp-fe-lol-social.wad
wad/11.24/: rcp-fe-lol-champ-select.wad  rcp-fe-lol-collections.wad  rcp-fe-lol-navigation.wad  rcp-fe-lol-parties.wad  rcp-fe-lol-social.wad
wad/12.1/: rcp-fe-lol-champ-select.wad  rcp-fe-lol-collections.wad  rcp-fe-lol-navigation.wad  rcp-fe-lol-parties.wad  rcp-fe-lol-profiles.wad  rcp-fe-lol-social.wad
wad/12.10/: rcp-fe-lol-champ-select.wad  rcp-fe-lol-navigation.wad  rcp-fe-lol-parties.wad  (+1 more)
(+127 files in other folders)
