[tool.poetry]
name = "lcufixtool"
version = "0.1.0"
description = ""
authors = ["astwy <2477547246@qq.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
rich = "^13.3.2"
PySide6 = "^6.4.2"
psutil = "^5.9.4"
Nuitka = "^1.5.3"
zstandard = "^0.20.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
